--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".autentifikasi.SignUpActivity"></activity>
+        <activity android:name=".DashboardActivity"></activity>
+        <activity android:name=".AboutActivity" />
+        <activity android:name=".autentifikasi.SignUpActivity" />
+        <activity android:name=".autentifikasi.LoginActivity" />
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".autentifikasi.SignUpActivity" />
         <activity android:name=".autentifikasi.LoginActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
