--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DashboardActivity"></activity>
+
+        <activity android:name=".Dashboard.DashboardActivity"></activity>
         <activity android:name=".AboutActivity" />
         <activity android:name=".autentifikasi.SignUpActivity" />
         <activity android:name=".autentifikasi.LoginActivity" />
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".autentifikasi.SignUpActivity" />
-        <activity android:name=".autentifikasi.LoginActivity" />
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="fullSensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
