--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".Dashboard.DashboardActivity"></activity>
+        <activity android:name=".tambahdata.TambahData"></activity>
+        <activity android:name=".Dashboard.DashboardActivity" />
         <activity android:name=".AboutActivity" />
         <activity android:name=".autentifikasi.SignUpActivity" />
         <activity android:name=".autentifikasi.LoginActivity" />
